--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "nodemailer": "^6.9.13",
-    "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.3",
     "whatsapp-web.js": "^1.23.0"
   }
 }
