--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bot de WhatsApp usando whatsapp-web.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node --max_old_space_size=500 index.js"
   },
   "author": "",
   "license": "ISC",
