--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bot de WhatsApp usando whatsapp-web.js",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start node --max_old_space_size=500 index.js --name whatsapp-bot",
+    "start": "pm2 start index.js --name whatsapp-bot",
     "stop": "pm2 stop whatsapp-bot",
     "restart": "pm2 restart whatsapp-bot",
     "logs": "pm2 logs whatsapp-bot"
@@ -18,4 +18,5 @@
     "whatsapp-web.js": "^1.23.0"
   }
 }
+
 
